new page "contact"

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,2 +1,87 @@
-  
-<router-outlet></router-outlet> 
+<div class="pages">
+  <h1>КОНТАКТЫ</h1>
+  <table class="table">
+    <tr>
+      <td><strong>ОБЩИЕ ВОПРОСЫ</strong>
+        <br />
+        — 8 (495) 78-915-78
+        <br />
+        — будни с 10 до 19
+        <br />
+        — info@vtvoihrukah.ru
+      </td>
+      <td>
+        <strong>РАБОТА САЙТА И ФОРУМА</strong>
+        <br />
+        — Андрей Попов
+        <br />
+        — 8(916) 677-24-28
+        <br />
+        — progr@gmail.com
+      </td>
+    </tr>
+    <tr>
+      <td><strong>КООРДИНАТОР ПО ПРИЕМУ И РАСПРЕДЕЛЕНИЮ ПОМОЩИ</strong>
+        <br />
+        — 8 (915) 097-87-78
+        <br />
+        — будни с 10 до 19
+        <br />
+        — 0978778@gmail.com
+      </td>
+      <td><strong>ВОЛОНТЕРСКИЙ ЦЕНТР</strong>
+        <br />
+        — volontery.vtvoihrukah@gmail.com
+      </td>
+    </tr>
+    <tr>
+      <td><strong>ПРЕЗИДЕНТ ФОНДА «ВОЛОНТЕРЫ В ПОМОЩЬ ДЕТЯМ-СИРОТАМ»</strong>
+        <br />
+        — Елена Сергеева
+        <br />
+        — 8 (916) 301-59-51
+        <br />
+        — e.sergeeva@gmail.com
+      </td>
+      <td><strong>КОММУНИКАЦИИ</strong>
+        <br />
+        — Дарья Маркова
+        <br />
+        — 8 (903) 206-22-46
+        <br />
+        — darya_markova@yandex.ru
+      </td>
+    </tr>
+    <tr>
+      <td><strong>ВИЦЕ-ПРЕЗИДЕНТ</strong>
+        <br />
+        — Анна Виноградова
+        <br />
+        — 8 (916) 130-79-85
+        <br />
+        — c 9:00 до 20:00
+        <br />
+        — anna.vinogradova@gmail.com
+      </td>
+      <td><strong>КООРДИНАТОР ПО ОРГАНИЗАЦИИ АКЦИЙ ПО СБОРУ ПОМОЩИ, ЯРМАРОК, ШВЕЙНЫХ МАСТЕРСКИХ</strong>
+        <br />
+        — Мария Лапицкая
+        <br />
+        — 8 (926) 688-71-88
+        <br />
+        — mariya.lapitskaya@gmail.com
+      </td>
+    </tr>
+    <tr>
+      <td><strong>АДРЕС ОФИСА</strong>
+        <br />
+        — Москва, ...
+        <br />
+        — Перед приездом обязательно договариваться с сотрудником фонда
+      </td>
+      <td>
+      </td>
+    </tr>
+  </table>
+</div>
+<router-outlet></router-outlet>
