--- a/src/app/programms/programms.component.html
+++ b/src/app/programms/programms.component.html
@@ -1,2 +1,227 @@
-  
-<router-outlet></router-outlet> 
+<div class="pages">
+
+  <table class="table">
+    <tr >
+      <td width="30%">
+        <img src="../../assets/img/happy.jpg" width="100%">
+      </td>
+
+      <td>
+
+        <h1>ПРОГРАММЫ</h1>
+
+        <div class="panel-group" id="collapse-group">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h4>Программа "Профилактика социального сиротства"</h4>
+              Мы оказываем поддержку семьям в ситуации потенциальной угрозы изъятия или отказа от ребенка. Мы убеждены, что сохранить ребенка
+              в семье возможно, и многие дети не попали бы в детские дома, если бы их родителям вовремя была оказана необходимая помощь.
+              <br />
+              <div class="more"><a data-toggle="collapse" data-parent="#collapse-group" href="#el1" >Подробнее о программе</a></div>
+
+            </div>
+            <div id="el1" class="panel-collapse collapse in">
+              <div class="panel-body">
+                Наши психологи, юристы, социальные работники, волонтеры поддерживают тех, кто оказался в трудной ситуации: родителей - выпускников детдомов,
+                если есть опасность, что их дети тоже пополнят систему сиротских учреждений; многодетных матерей, которые остались без поддержки родственников. Мы помогаем родителям растить малышей с особенностями развития самостоятельно и не отдавать в детский дом.
+                <br />
+                Мы уже помогли более чем 700 семьям. Эти дети растут с любящими их людьми, а не в интернате.
+                <br />
+                Программа «Профилактика социального сиротства» помогает предотвратить попадание ребенка в учреждение ребенка на разных этапах жизни семьи.
+                <br /> <br />
+                <table class="table">
+                  <tr>
+                    <td width="25%" class="projects"><strong>Проект "Профилактика отказов от новорожденных"</strong></td>
+                    <td width="25%" class="projects"><strong>Проект "Теплый дом"</strong></td>
+                    <td width="25%" class="projects"><strong>Проект "Помощь семьям в сложной жизненной ситуации"</strong></td>
+                    <td width="25%" class="projects"><strong>Проект "Помощь родителям с ментальными особенностями"</strong></td>
+                  </tr>
+                  <tr>
+                    <td class="descr">
+                      <img src="../../assets/img/newborn.jpg" width="100%">
+                      <br />
+                      Мы сотрудничаем с роддомами, которые сообщают нам о мамах, планирующих отказаться от ребенка.
+                      <br />
+                      Психологи нашего фонда выезжают к женщинам в течение суток, выясняют обстоятельства, которые заставили задуматься об отказе от ребенка, и
+                      предлагают поддержку, если у мамы есть желание сохранить ребенка.
+                      <br />
+                      <div class="more"><a href="#">Узнать больше</a></div>
+                    </td>
+                    <td class="descr">
+                      <img src="../../assets/img/mom-and-newborn.jpg" width="100%">
+                      <br />
+                      Задача "Теплого дома" — стать поддержкой для мамы в самый острый и тревожный период ее жизни, когда она осталась одна с младенцем на руках.
+                      <br />
+                      В центре работают психологи, юристы и социальные работники, которые помогают маме научиться заботиться о своем ребенке, а также разобраться с
+                      теми проблемами, которые привели ее к трудной ситуации.
+                      <br />
+                      <div class="more"><a href="#">Узнать больше</a></div>
+                    </td>
+                    <td class="descr">
+                      <img src="../../assets/img/mom-and-newborn2.jpg" width="100%">
+                      <br />
+                      Мы оказываем комплексную поддержку семьям, которые находятся в ситуации угрозы отобрания или отказа от ребенка.
+                      Куратор семьи, психолог и юрист совместно помогают родителям решить проблемы и не допустить попадание ребенка в государственное учреждение.
+                      <br />
+                      <div class="more"><a href="#">Узнать больше</a></div>
+                    </td>
+                    <td class="descr">
+                      <img src="../../assets/img/mom-and-baby.jpg" width="100%">
+                      <br />
+                      Мы помогаем родителям с ментальными особенностями и их детям. С ними работают психологи, юристы, социальные работники, специалисты в области
+                      психиатрии и неврологии с целью сохранить семью.
+                      <br />
+                      <div class="more"><a href="#">Узнать больше</a></div>
+                    </td>
+                  </tr>
+                </table>
+              </div>
+            </div>
+          </div>
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h4>Программа "Помощь детям сиротам в учреждениях"</h4>
+              Цель программы: улучшить условия жизни детей, которые потеряли семью и находятся в больницах и интернатных учреждениях.
+              <br />
+              Мы общаемся с ребятами из детских домов, помогаем в учебе и выборе профессии, стараемся обеспечить самым необходимым, оказываем помощь в лечении детей, оплачиваем работу нянь в больницах.
+              <br />
+              <div class="more">
+              <a data-toggle="collapse" data-parent="#collapse-group" href="#el2">Подробнее о программе</a></div>
+            </div>
+            <div id="el2" class="panel-collapse collapse">
+              <div class="panel-body">
+                <table class="table">
+                  <tr>
+                    <td width="25%" class="projects"><strong>Проект "Быть рядом"</strong></td>
+                    <td width="25%" class="projects"><strong>Проект "Дети в беде"</strong></td>
+                    <td width="25%" class="projects"><strong>Проект "Дистанционное образование"</strong></td>
+                    <td width="25%" class="projects"><strong>Проект "Отказники в больницах: ресурсное обеспечение"</strong></td>
+                  </tr>
+                  <tr>
+                    <td class="descr">
+                     <img src="../../assets/img/poor-baby.jpg" width="100%">
+                      Мы поддерживаем детей, которые находятся в больницах и интернатных учреждениях. Волонтеры стараются обеспечить заботу,
+                      уход и развитие детей, становятся их друзьями и наставниками, навещают молодых людей в психоневрологических интернатах.
+                      <br />
+                      <div class="more"><a href="#">Узнать больше</a></div>
+                    </td>
+                    <td class="descr">
+                      <img src="../../assets/img/inv.jpg" width="100%">
+                      <br />
+                      Мы организуем обследование, лечение и реабилитацию детей-сирот, которым необходима медицинская помощь, оплачиваем труд нянь,
+                      которые ухаживают за детьми весь период лечения.
+                      <br />
+                      <div class="more"><a href="#">Узнать больше</a></div>
+                    </td>
+                    <td class="descr">
+                      <img src="../../assets/img/distobr.jpg" width="100%">
+                      <br />
+                      Фонд "Волонтеры в помощь детям-сиротам" совместно с Центром равных возможностей "Вверх" разработал проект "Дистанционное образование
+                      воспитанников детских домов", который помогает воспитанникам интернатных учреждений в учебе, подготовке к экзаменам и поступлению в колледжи и вузы.
+                      <br />
+                      <div class="more"><a href="#">Узнать больше</a></div>
+                    </td>
+                    <td class="descr">
+                      <img src="../../assets/img/hand.jpg" width="100%">
+                      <br />
+                      Цель проекта: улучшить условия пребывания детей-сирот во время нахождения в больницах, обеспечить им уход и заботу. В ряде больниц на средства наших
+                      спонсоров оплачивается работа няни-воспитателя.
+                      <br />
+                      <div class="more"><a href="#">Узнать больше</a></div>
+                    </td>
+                  </tr>
+                </table>
+
+              </div>
+            </div>
+          </div>
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h4>Программа "Семейное устройство"</h4>
+              Цель программы: помочь детям-сиротам найти семью, а родителям принять ребенка.
+              <br />
+              <div class="more">
+              <a data-toggle="collapse" data-parent="#collapse-group" href="#el3">Подробнее о программе</a>
+              </div>
+
+            </div>
+            <div id="el3" class="panel-collapse collapse">
+              <div class="panel-body">
+                В рамках программы:
+                <ul>
+                  <li>мы содействуем в распространении информации о детях-сиротах и детях, оставшихся без попечения родителей,</li>
+                  <li>оказываем юридическую, психологическую, информационную помощь как семьям, которые только готовятся к воспитанию ребенка-сироты, так и состоявшимся приемным родителям,</li>
+                  <li>помогаем в решении вопросов лечения и реабилитации детей с инвалидностью и особенностями развития, которых воспитывают принимающие родители,</li>
+                  <li>оказываем услугу сопровождения приемных семей в соответствии с приказом Департамента труда и социальной защиты населения г. Москвы, а также проводим медиации между приемной и кровной семьей ребенка.</li>
+                </ul>
+
+                <table class="table">
+                  <tr>
+                    <td width="25%" class="projects"><strong>Проект "Близкие люди"</strong></td>
+                    <td width="25%" class="projects"><strong>Проект "Информационный центр "Дети в семье"</strong></td>
+                    <td width="25%" class="projects"><strong>Проект "Территория без сирот"</strong></td>
+                    <td width="25%" class="projects"><strong>Школа приемных родителей</strong></td>
+                  </tr>
+                  <tr>
+                    <td class="descr">
+                      <img src="../../assets/img/family-autumn.jpg" width="100%">
+                      Проект "Близкие люди" помогает семьям, принявшим на воспитание детей с особенностями развития, со сложными или редкими заболеваниями в решении многочисленных вопросов, связанных с состоянием здоровья и системой реабилитации ребенка.
+                      <br />
+                      <div class="more"><a href="#">Узнать больше</a></div>
+                    </td>
+                    <td class="descr">
+                      <img src="../../assets/img/deti-v-semie.jpg" width="100%">
+                      <br />
+                      Специалисты проекта оказывают юридическую, психологическую, информационную помощь как семьям, которые только готовятся к воспитанию ребенка-сироты, так и состоявшимся приемным родителям.
+                      <br />
+                      <div class="more"><a href="#">Узнать больше</a></div>
+                    </td>
+                    <td class="descr">
+                      <img src="../../assets/img/baby-and-dog.jpg" width="100%">
+                      <br />
+                      Мы оказываем содействие в распространении информации о детях-сиротах и детях, оставшихся без попечения родителей, а также информационную и методическую поддержку муниципальным органам опеки и попечительства.
+                      <br />
+                      <div class="more"><a href="#">Узнать больше</a></div>
+                    </td>
+                    <td class="descr">
+                      <img src="../../assets/img/parents-school.jpg" width="100%">
+                      <br />
+                      Кандидаты в приемные родители, которые планируют взять ребенка и ранее не обучались в ШПР, могут пройти общий курс подготовки. Cемьи, которые готовы стать временной поддержкой для ребенка, могут посетить краткосрочные модули.
+                      <br />
+                      <div class="more"><a href="#">Узнать больше</a></div>
+                    </td>
+                  </tr>
+                </table>
+
+              </div>
+            </div>
+          </div>
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h4>Программа "На стороне ребенка"</h4>
+              Цель программы: изменение ситуации с социальным сиротством, законодательства, общественного мнения и всей системы помощи семьям и детям, попавшим в трудные ситуации.
+              <br />
+              Мы организуем работу юристов над законодательными изменениями, обучение сотрудников организаций для детей-сирот и сферы защиты прав детства, проводим мониторинг учреждений.
+              <br />
+              <div class="more">
+                <a data-toggle="collapse" data-parent="#collapse-group" href="#el4">Подробнее о программе</a>
+              </div>
+            </div>
+            <div id="el4" class="panel-collapse collapse">
+              <div class="panel-body">
+                Благодаря активной работе, в том числе, нашего фонда над продвижением и разработкой нового законодательства (постановления правительства РФ № 481 «О деятельности организаций для детей-сирот и детей, оставшихся без попечения родителей») в России идет реформа детских домов.
+                <br />
+                Они должны стать местами, устроенными по-домашнему, условия жизни в них должны быть максимально приближены семейным. Само пребывание там ребенка теперь считается только временным — как можно скорее он должен быть возвращен в кровную семью, а если это не представляется возможным — то в приемную.
+              </div>
+            </div>
+          </div>
+        </div>
+      </td>
+    </tr>
+
+  </table>
+
+</div>
+
+
+<router-outlet></router-outlet>
